.deploy/lerke/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: lerke
  name: lerke
  namespace: lerke
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: lerke
  type: LoadBalancer
